--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </nav>
 
-        <!-- images slider -->
+        <!-- images slider carousel-->
 
         <section class="container">
 
